carlos.cirello/compiler/y.output

state 0
	$accept: .top $end 

	FormToken  shift 3
	.  error

	top  goto 1
	form  goto 2

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  form.    (1)

	.  reduce 1 (src line 43)


state 3
	form:  FormToken.TextToken '{' stack '}' 

	TextToken  shift 4
	.  error


state 4
	form:  FormToken TextToken.'{' stack '}' 

	'{'  shift 5
	.  error


state 5
	form:  FormToken TextToken '{'.stack '}' 
	stack: .    (3)

	.  reduce 3 (src line 67)

	stack  goto 6

state 6
	form:  FormToken TextToken '{' stack.'}' 
	stack:  stack.question 

	QuotedStringToken  shift 9
	'}'  shift 7
	.  error

	question  goto 8

state 7
	form:  FormToken TextToken '{' stack '}'.    (2)

	.  reduce 2 (src line 53)


state 8
	stack:  stack question.    (4)

	.  reduce 4 (src line 68)


state 9
	question:  QuotedStringToken.TextToken questionType 

	TextToken  shift 10
	.  error


state 10
	question:  QuotedStringToken TextToken.questionType 

	StringQuestionToken  shift 12
	IntQuestionToken  shift 13
	BoolQuestionToken  shift 14
	.  error

	questionType  goto 11

state 11
	question:  QuotedStringToken TextToken questionType.    (5)

	.  reduce 5 (src line 81)


state 12
	questionType:  StringQuestionToken.    (6)

	.  reduce 6 (src line 96)


state 13
	questionType:  IntQuestionToken.    (7)

	.  reduce 7 (src line 100)


state 14
	questionType:  BoolQuestionToken.    (8)

	.  reduce 8 (src line 104)


16 terminals, 6 nonterminals
9 grammar rules, 15/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
55 working sets used
memory: parser 4/30000
0 extra closures
9 shift entries, 1 exceptions
5 goto entries
0 entries saved by goto default
Optimizer space used: output 14/30000
14 table entries, 0 zero
maximum spread: 16, maximum offset: 15
